dodanie funkcji aktualizacji
