# backend/przedmioty/router.js
@@ -1,6 +1,11 @@
 import { Router } from "express";
 import { handler } from "../utils.js";
-import { createPrzedmiot, getPrzedmioty, deletePrzedmiot } from "./handlers.js";
+import {
+  createPrzedmiot,
+  getPrzedmioty,
+  deletePrzedmiot,
+  updatePrzedmioty,
+} from "./handlers.js";
 
 export function przedmiotyRouter(dbClient) {
   const router = Router();
@@ -9,6 +14,8 @@ export function przedmiotyRouter(dbClient) {
   router.post("/", handler(createPrzedmiot(dbClient)));
 
   router.delete("/:id", handler(deletePrzedmiot(dbClient)));
+
+  router.put("/:id", handler(updatePrzedmioty(dbClient)));
 
   return router;
 }
