# backend/swagger-schema.yml
@@ -48,6 +48,7 @@ components:
           type: integer
           example: 5
 
+
     StudentsResponse:
       type: array
       items:
@@ -87,22 +88,7 @@ components:
         email:
           type: string
           example: "jan.kowalski@example.com"
-
-    UpdateWykladowca:
-        type: object
-        properties:
-          imie:
-            type: string
-            example: "Jan"
-          nazwisko:
-            type: string
-            example: "Kowalski"
-          telefon:
-            type: string
-            example: "987654321"
-          email:
-            type: string
-            example: "jan.kowalski@example.com"         
+        
 
     CreateKierunek:
       type: object
@@ -155,6 +141,7 @@ components:
         id_kierunek:
           type: integer
           example: 1
+
 
     CreatePrzedmiot:
       type: object
@@ -260,6 +247,54 @@ paths:
             application/json:
               schema:
                  $ref: "#/components/schemas/NotFoundResponse"
+    put:
+      summary: Zaktualizuj dane studenta
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            description: ID studenta, którego dane mają zostać zaktualizowane
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateStudent'
+      responses:
+        '200':
+          description: Dane studenta zostały zaktualizowane
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Student'
+        '400':
+          description: Błędne dane wejściowe
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Nieprawidłowe dane wejściowe"
+        '404':
+          description: Student nie został znaleziony
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundResponse'
+        '500':
+          description: Wewnętrzny błąd serwera
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Wystąpił błąd podczas aktualizacji studenta"
 
   /plany:
     get:
@@ -312,6 +347,45 @@ paths:
                 schema:
                   $ref: "#/components/schemas/NotFoundResponse"
 
+      put:
+        summary: Zaktualizuj plany
+        parameters:
+          - name: id
+            in: path
+            required: true
+            schema:
+              type: integer
+            description: ID planów do aktualizacji
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreatePlan'
+        responses:
+          '200':
+            description: Zaktualizowany plan kształcenia
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Plan'
+          '404':
+            description: Plan nie znaleziony
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/NotFoundResponse'
+          '400':
+            description: Błędne dane wejściowe
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    error:
+                      type: string
+                      example: "Nieprawidłowe dane wejściowe"
+
   /przedmioty:
     get:
       summary: Pobierz listę przedmiotów
@@ -362,6 +436,54 @@ paths:
                 application/json:
                   schema:
                     $ref: "#/components/schemas/NotFoundResponse"
+        put:
+          summary: Zaktualizuj dane przedmiotu
+          parameters:
+            - name: id
+              in: path
+              required: true
+              schema:
+                type: integer
+                description: ID przedmiotu, którego dane mają zostać zaktualizowane
+          requestBody:
+            required: true
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/CreatePrzedmiot'
+          responses:
+            '200':
+              description: Dane przedmiotu zostały zaktualizowane
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/Przedmiot'
+            '400':
+              description: Błędne dane wejściowe
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      error:
+                        type: string
+                        example: "Nieprawidłowe dane wejściowe"
+            '404':
+              description: Przedmiot nie został znaleziony
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/NotFoundResponse'
+            '500':
+              description: Wewnętrzny błąd serwera
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      error:
+                        type: string
+                        example: "Wystąpił błąd podczas aktualizacji przedmiotu"
 
   /kierunki:
     get:
@@ -412,6 +534,54 @@ paths:
              application/json:
               schema:
                 $ref: "#/components/schemas/NotFoundResponse"
+    put:
+      summary: Zaktualizuj dane kierunku
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            description: ID kierunku, którego dane mają zostać zaktualizowane
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateKierunek'
+      responses:
+        '200':
+          description: Dane kierunku zostały zaktualizowane
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Kierunek'
+        '400':
+          description: Błędne dane wejściowe
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Nieprawidłowe dane wejściowe"
+        '404':
+          description: Kierunek nie został znaleziony
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundResponse'
+        '500':
+          description: Wewnętrzny błąd serwera
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Wystąpił błąd podczas aktualizacji kierunku"
 
   /wykladowcy:
     get:
@@ -463,7 +633,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/NotFoundResponse"
-                
+
     put:
       summary: Zaktualizuj dane wykładowcy
       parameters:
@@ -478,7 +648,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateWykladowca'
+              $ref: '#/components/schemas/CreateWykladowca'
       responses:
         '200':
           description: Dane wykładowcy zostały zaktualizowane
